# lamlang

./: README.md  lamlang.cabal
app/: Main.hs
src/Lang/: Data.hs  Eval.hs  Lexer.hs  Parser.hs
tests/: Test.hs
