cabal-version:      3.0
name:               lamlang
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             lambda-src
maintainer:         dubstepaztec35@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  
        Lang.Parser
        Lang.Data
        Lang.Lexer
        Lang.Eval
    build-depends:    
        base >=4.14 && <5
      , containers
    default-language: Haskell2010

executable lamlang
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    
        base >=4.14 && <5
      , containers
      , lamlang              
    default-language: Haskell2010

test-suite tests
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Test.hs
    build-depends:    
        base >=4.14 && <5
      , tasty
      , tasty-hunit
      , containers
      , lamlang              
    default-language: Haskell2010
